--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-global-shortcut": "~2",
     "@tauri-apps/plugin-opener": "^2",
+    "add": "^2.0.6",
+    "cui-solid": "2.1.0",
+    "cui-solid-icons": "^1.0.8",
     "solid-js": "^1.9.3"
   },
   "devDependencies": {
