--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,8 @@ tauri = { version = "2.5.1", features = ["tray-icon", "image-png", "image-ico"] 
 tauri-plugin-opener = "2"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
+enigo = "0.3.0"
+arboard = "3.5.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
