--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
   "dependencies": {
     "@solidjs/router": "^0.15.3",
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-global-shortcut": "~2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-positioner": "^2.3.1",
+    "@tauri-apps/plugin-process": "^2.3.1",
     "add": "^2.0.6",
     "cui-solid": "2.1.0",
     "cui-solid-icons": "^1.0.8",
-    "solid-js": "^1.9.3"
+    "solid-js": "^1.9.3",
+    "vditor": "^3.11.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.2",
     "@tauri-apps/cli": "^2",
     "eslint": "^9.27.0",
+    "less": "^4.5.1",
     "typescript": "~5.6.2",
     "unocss": "^66.1.2",
     "vite": "^6.0.3",
