--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "fast-paste"
 version = "0.1.0"
 description = "A Tauri App"
-authors = [ "you" ]
+authors = ["you"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,33 +12,33 @@ edition = "2021"
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
 name = "fast_paste_lib"
-crate-type = [
-  "staticlib",
-  "cdylib",
-  "rlib"
-]
+crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2.5.1", features = ["tray-icon", "image-png", "image-ico"] }
+tauri = { version = "2.5.1", features = [
+  "tray-icon",
+  "image-png",
+  "image-ico",
+] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = [ "derive" ] }
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 enigo = "0.3.0"
 arboard = "3.5.0"
 tauri-plugin-process = "2.3.1"
 tauri-plugin-fs = "2.4.4"
 tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
+
+
+[target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.26.1"
 objc2 = "0.5"
 objc2-app-kit = { version = "0.2", features = ["NSWindow"] }
 objc = "0.2.7"
 
-
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
-
-[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
 tauri-plugin-positioner = "2.3.1"
