--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "add": "^2.0.6",
     "cui-solid": "2.1.0",
     "cui-solid-icons": "^1.0.8",
+    "sharp": "^0.34.5",
     "solid-js": "^1.9.3",
     "vditor": "^3.11.2"
   },
