--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2.5.1", features = [
+tauri = { version = "2.5.1", features = ["macos-private-api",
   "tray-icon",
   "image-png",
   "image-ico",
